--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
   padding-top: 50px;
+  
 }
 .starter-template {
   padding: 40px 15px;
@@ -29,4 +30,8 @@ body {
 }
 .complete {
   text-decoration: line-through;
+}
+.container {
+  background-color: lightblue;
+
 }
